Fix article image display on firefox
Closes #41

--- a/assets/css/blog/hydra.css
+++ b/assets/css/blog/hydra.css
@@ -200,6 +200,7 @@ a.block {
 
 .article-cover {
     aspect-ratio: 2/1;
+    width: 100%; /* required for Firefox */
     object-fit: cover;
     margin-bottom: 1rem;
 }
